rails.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: sample
  name: rails
spec:
  selector:
    app: rails
  type: NodePort
  ports:
  - port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sample
  name: rails
spec:
  selector:
    matchLabels:
      app: rails
  template:
    metadata:
      labels:
        app: rails
    spec:
      containers:
      - name: rails
        image: <アカウント名>/sample_rails:latest
        imagePullPolicy: Always
        command: ["bundle", "exec", "rails", "s"]
        ports:
        - containerPort: 3000
